--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,66 @@
+* {
+  border: 1px black solid;
+}
 .App {
   text-align: center;
+  background-color: lightgray;
+  font-family: "Noto Sans", sans-serif;
+  max-width: 100%;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+img {
+  width: 100%;
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
+.mainDivs {
+  width: 100%;
 }
 
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+.MainFlexBox {
   display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
 }
 
-.App-link {
-  color: #61dafb;
+/* Navbar styling */
+#NavbarDiv {
+  max-height: 10%;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+#NavbarFlexBox {
+  flex-direction: row;
+  justify-content: space-between;
+}
+
+#navbarLogo {
+  display: flex;
+}
+#navbarLogo h3 {
+  align-self: baseline;
+}
+
+#NavbarDiv img {
+  width: 10vh;
+  height: auto;
+}
+
+#hamburgerIcon {
+  padding: 20px;
+}
+
+/* Style the Hero component */
+.header {
+  text-align: left;
+}
+#HeroFlexBox h3 {
+  text-align: left;
+}
+
+/* Style the PartnersSection component */
+#PartnersFlexBox {
+  display: flex;
+  flex-flow: row wrap;
+  justify-content: space-around;
+}
+#PartnersFlexBox img {
+  max-width: 25%;
+  object-fit: contain;
 }
