--- a/src/components/VerticalTiles/Cards.css
+++ b/src/components/VerticalTiles/Cards.css
@@ -1,4 +1,9 @@
 .card {
+  justify-content: center;
+  height: auto;
+  align-items: center;
+  padding: 1.5em;
+  padding-top: 2.5em;
   box-shadow: 0px 2px 4px rgba(0, 0, 0, 0.2);
   border-radius: 8px;
   overflow: hidden;
@@ -24,6 +29,8 @@
 .card h3 {
   font-size: 24px;
   margin: 16px;
+  margin: auto 0;
+  font-size: 1em;
 }
 
 .card p {
@@ -51,4 +58,25 @@
 
 .cardButtons {
   display: none;
+}
+
+@media screen and (min-width: 1024px) {
+  .card {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    width: 35vh;
+    height: auto;
+    align-items: center;
+    padding: 1.5em;
+    padding-top: 2.5em;
+  }
+  .card h3 {
+    text-align: center;
+    font-size: 1.7em;
+  }
+  .card p {
+    text-align: center;
+    font-size: 1.4em;
+  }
 }
