--- a/src/components/VerticalTiles/Cards.css
+++ b/src/components/VerticalTiles/Cards.css
@@ -31,6 +31,7 @@
   margin: 16px;
   margin: auto 0;
   font-size: 1em;
+  text-shadow: 1px 1px 2px #ffffff;
 }
 
 .card p {
@@ -66,6 +67,26 @@
     flex-direction: column;
     justify-content: center;
     width: 35vh;
+    height: auto;
+    align-items: center;
+    padding: 1.5em;
+    padding-top: 2.5em;
+  }
+  .card h3 {
+    text-align: center;
+    font-size: 1.7em;
+  }
+  .card p {
+    text-align: center;
+    font-size: 1.4em;
+  }
+}
+@media screen and (min-width: 1400px) {
+  .card {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    width: 45vh;
     height: auto;
     align-items: center;
     padding: 1.5em;
